data/derived/comb/progs/unify/prog3480.ml.out
Characters 70-74:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type string but an expression was expected of type
         int
